console-setup (1.50) UNRELEASED; urgency=low

  * When deciding about whether cached.kmap.gz is actual test against
    /etc/default/keyboard rather than agains /etc/default/console-setup.
    Thanks to Kurt Roeckx and Renato S. Yamane, closes: #558448, #558475.

 -- Anton Zinoviev <zinoviev@debian.org>  Mon, 30 Nov 2009 17:53:32 +0200

console-setup (1.49) unstable; urgency=low

  * Extend Fonts/standard.equivalents in order to support the symbols
    required by toilet-fonts.  Thanks to Francesco Poli.
  * New version of the Terminus font in the source package.

 -- Anton Zinoviev <zinoviev@debian.org>  Fri, 20 Nov 2009 13:05:43 +0200

console-setup (1.48) unstable; urgency=low

  [ Frans Pop ]
  * When console-setup.config is run in the D-I environment, simply set the
    charmap to UTF-8; the installer internally always uses the locale C.UTF-8.

  [ Anton Zinoviev]
  * config file: document that Goha and GohaClassic are available only
    with CODESET=Ethiopian.
  * When repairing errors in the config file cause by previous versions do
    not ask unconditionaly the layout/variant questions if there are
    values in the configuration file.
  * Do not install kbdnames.gz in console-setup-mini but only in the
    udeb.
  * keyboard-configuration(config): do not give --mini option to the
    preprocessor.  This returns back the keyboard model names in the
    file.  Thanks to Mario 'BitKoenig' Holbe, closes: #557001.
  * setupcon: Do not substitute empty FONTFACE and FONTSIZE (I had
    forgotten that setupcon supported this mode of operation).  Thanks to
    Josh Triplett, closes: #556882.
  * There is no need to escape the single quotes in kbdnames-maker.
    Thanks to Gerfried Fuchs, closes: #548332.
  * (Debconf) Do not overwrite non-standard keyboard layouts.  Thanks to
    Shai Berger, closes: #556426.
  * console-setup: Ensure that /etc/default/keyboard is sourced in
    /etc/default/console-setup.
