@@ -28,8 +28,7 @@ if [ "$1" = "configure" ]; then
     charmap="${RET:-UTF-8}"
 
     if [ ! -e $CONFIGFILE ]; then
-	cat /usr/share/doc/console-setup/examples/console-setup \
-	    >$CONFIGFILE || true
+	cat /usr/share/console-setup/console-setup >$CONFIGFILE || true
     fi
 
     . $CONFIGFILE || true
@@ -44,8 +43,7 @@ if [ "$1" = "configure" ]; then
     then
 	cp -a $CONFIGFILE $CONFIGFILE.tmp
 
-	cat /usr/share/doc/console-setup/examples/console-setup \
-	    >$CONFIGFILE.tmp
+	cat /usr/share/console-setup/console-setup >$CONFIGFILE.tmp
 
 	cat >>$CONFIGFILE.tmp <<EOF
 
