@@ -37,7 +37,7 @@ if [ "$1" = "configure" ]; then
     options="$RET"
 
     if [ ! -e $CONFIGFILE ]; then
-	cat /usr/share/doc/keyboard-configuration/examples/keyboard \
+	cat /usr/share/console-setup/keyboard \
 	    /usr/share/console-setup-mini/keyboard \
 	    2>/dev/null >$CONFIGFILE || true
     fi
