@@ -3,6 +3,8 @@ console-setup (1.50) UNRELEASED; urgency=low
   * When deciding about whether cached.kmap.gz is actual test against
     /etc/default/keyboard rather than agains /etc/default/console-setup.
     Thanks to Kurt Roeckx and Renato S. Yamane, closes: #558448, #558475.
+  * Do not use files in /usr/share/doc as templates.  Thanks to Trent
+    W. Buck, closes: #558229.
 
  -- Anton Zinoviev <zinoviev@debian.org>  Mon, 30 Nov 2009 17:53:32 +0200
 
